Adding Kibana 4 beta stuff

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,7 +11,7 @@ command = /opt/logstash/bin/logstash agent -f /etc/logstash/conf.d -l /var/log/l
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/logstash.log
 
-[program:nginx]
-command = /usr/sbin/nginx
+[program:kibana]
+command = /var/www/kibana/bin/kibana
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/nginx.log
