--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,12 +2,12 @@
 nodaemon=true
 
 [program:elasticsearch]
-command = /opt/elasticsearch-${KIBANA_VERSION}/bin/elasticsearch -Des.http.port=9200
+command = /opt/elasticsearch-${ELASTICSEARCH_VERSION}/bin/elasticsearch -Des.http.port=9200
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/elasticsearch.log
 
 [program:logstash]
-command = /opt/logstash-${KIBANA_VERSION}/bin/logstash agent -f /etc/logstash/conf.d -l /var/log/logstash.log
+command = /opt/logstash-${LOGSTASH_VERSION}/bin/logstash agent -f /etc/logstash/conf.d -l /var/log/logstash.log
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/logstash.log
 
