Still working it

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,16 +2,22 @@
 nodaemon=true
 
 [program:elasticsearch]
-command = /opt/elasticsearch-${ELASTICSEARCH_VERSION}/bin/elasticsearch -Des.http.port=9200
-redirect_stderr=true
-stdout_logfile=/var/log/supervisor/elasticsearch.log
+command = /opt/elasticsearch-1.4.2/bin/elasticsearch -Des.http.port=9200
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/elasticsearch.stdout.log
+stderr_logfile=/var/log/elasticsearch.stderr.log
 
 [program:logstash]
-command = /opt/logstash-${LOGSTASH_VERSION}/bin/logstash agent -f /etc/logstash/conf.d -l /var/log/logstash.log
-redirect_stderr=true
-stdout_logfile=/var/log/supervisor/logstash.log
+command = /opt/logstash-1.4.2/bin/logstash -e 'input { stdin { } } output { elasticsearch { host => localhost } }'
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/logstash.stdout.log
+stderr_logfile=/var/log/logstash.stderr.log
 
 [program:kibana]
-command = /var/www/kibana/bin/kibana
-redirect_stderr=true
-stdout_logfile=/var/log/supervisor/nginx.log
+command = /opt/kibana-4.0.0-beta3/bin/kibana
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/kibana.stdout.log
+stderr_logfile=/var/log/kibana.stderr.log
