--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -49,9 +49,10 @@ export LOGSTASH_VERSION=1.4.2
 wget -qO - https://packages.elasticsearch.org/GPG-KEY-elasticsearch | sudo apt-key add -
 sudo add-apt-repository "deb http://packages.elasticsearch.org/elasticsearch/1.4/debian stable main"
 sudo add-apt-repository "deb http://packages.elasticsearch.org/logstash/1.4/debian stable main"
+sudo apt-get update && sudo apt-get install elasticsearch logstash -y
 curl -s https://download.elasticsearch.org/kibana/kibana/kibana-${KIBANA_VERSION}.tar.gz | tar zx -C /opt
 logstash -e 'input { stdin { } } output { elasticsearch { host => localhost protocol => "http"} }' &
-/opt/kibana-${KIBANA_VERSION}/bin/kibana
+/opt/kibana-${KIBANA_VERSION}/bin/kibana &
 SCRIPT
 
 $INSTALL_ZSH = <<SCRIPT
@@ -118,8 +119,12 @@ Vagrant.configure(2) do |config|
 
   # config.vm.provision "shell", inline: $INSTALL_JAVA8
   # config.vm.provision "shell", inline: $INSTALL_DOCKER
-  config.vm.provision "shell", inline: $INSTALL_ELK2
-  config.vm.provision "shell", inline: $INSTALL_ZSH
+  # config.vm.provision "shell", inline: $INSTALL_ELK2
+  config.vm.provision "shell", path: "setup/install_java8.sh"
+  config.vm.provision "shell", path: "setup/install_elk.sh"
+  config.vm.provision "shell", path: "setup/install_bro.sh"
+  config.vm.provision "shell", path: "setup/install_prezto.sh"
+  # config.vm.provision "shell", inline: $INSTALL_ZSH
 
   # View the documentation for the provider you are using for more
   # information on available options.
