Fix until I figure out Nginx

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,19 +1,19 @@
 [supervisord]
 nodaemon=true
 
-[program:elasticsearch]
-command = /opt/elasticsearch-1.4.2/bin/elasticsearch -Des.http.port=9200
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/elasticsearch.stdout.log
-stderr_logfile=/var/log/elasticsearch.stderr.log
-
 [program:logstash]
-command = /opt/logstash-1.4.2/bin/logstash -e 'input { stdin { } } output { elasticsearch { host => localhost } }'
+command = /opt/logstash/bin/logstash agent -e 'input { stdin { } } output { elasticsearch { host => localhost protocol => "http"} }'
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/logstash.stdout.log
 stderr_logfile=/var/log/logstash.stderr.log
+
+[program:elasticsearch]
+command = /usr/share/elasticsearch/bin/elasticsearch -Des.http.port=9200
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/elasticsearch.stdout.log
+stderr_logfile=/var/log/elasticsearch.stderr.log
 
 [program:kibana]
 command = /opt/kibana-4.0.0-beta3/bin/kibana
@@ -21,3 +21,10 @@ autostart=true
 autorestart=true
 stdout_logfile=/var/log/kibana.stdout.log
 stderr_logfile=/var/log/kibana.stderr.log
+
+# [program:nginx]
+# command = /usr/sbin/nginx
+# autostart=true
+# autorestart=true
+# stdout_logfile=/var/log/nginx.stdout.log
+# stderr_logfile=/var/log/nginx.stderr.log
