Making kibana folder generic

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,7 +16,7 @@ stdout_logfile=/var/log/elasticsearch.stdout.log
 stderr_logfile=/var/log/elasticsearch.stderr.log
 
 [program:kibana]
-command = /opt/kibana-4.0.0-beta3/bin/kibana
+command = /opt/kibana/bin/kibana
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/kibana.stdout.log
