--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -50,7 +50,7 @@ Vagrant.configure(2) do |config|
 
     # Customize the amount of memory on the VM:
     vb.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
-    vb.cpu = "4"
+    vb.cpus = 4
     vb.memory = "4096"
   end
 
