Fixing bro.conf logstash files

--- a/vagrant/logstash/bro-conn_log.conf
+++ b/vagrant/logstash/bro-conn_log.conf
@@ -20,7 +20,7 @@ input {
     sincedb_path => "/dev/null"
 
     #Edit the following path to reflect the location of your log files. You can also change the extension if you use something else
-    path => "/path/to/your/bro/logs/conn*.log"
+    path => "/nsm/bro/logs/conn*.log"
   }
 }
 
@@ -30,16 +30,16 @@ filter {
   if [message] =~ /^#/ {
     drop { }
   }
-  
+
   #Now, using the csv filter, we can define the Bro log fields
   if [type] == "bro-conn_log" {
     csv {
       columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","proto","service","duration","orig_bytes","resp_bytes","conn_state","local_orig","missed_bytes","history","orig_pkts","orig_ip_bytes","resp_pkts","resp_ip_bytes","tunnel_parents"]
-      
+
       #If you use a custom delimiter, change the following value in between the quotes to your delimiter. Otherwise, insert a literal <tab> in between the two quotes on your logstash system
       separator => ""
     }
-    
+
     #Let's convert our timestamp into the 'ts' field, so we can use Kibana features natively
     date {
       match => [ "ts", "UNIX" ]
@@ -51,7 +51,7 @@ filter {
 
       destination => "conn_state_full"
 
-      dictionary => [ 
+      dictionary => [
                     "S0", "Connection attempt seen, no reply",
                     "S1", "Connection established, not terminated",
                     "S2", "Connection established and close attempt by originator seen (but no reply from responder)",
@@ -64,10 +64,10 @@ filter {
                     "RSTRH", "Responder sent a SYN ACK followed by a RST, we never saw a SYN from the (purported) originator",
                     "SH", "Originator sent a SYN followed by a FIN, we never saw a SYN ACK from the responder (hence the connection was 'half' open)",
 		            "SHR", "Responder sent a SYN ACK followed by a FIN, we never saw a SYN from the originator",
-                    "OTH", "No SYN seen, just midstream traffic (a 'partial connection' that was not later closed)" 
+                    "OTH", "No SYN seen, just midstream traffic (a 'partial connection' that was not later closed)"
                     ]
     }
-  
+
     mutate {
       convert => [ "id.orig_p", "integer" ]
       convert => [ "id.resp_p", "integer" ]
@@ -87,4 +87,3 @@ output {
     embedded => true
   }
 }
-
