--- a/vagrant/logstash/bro-files_log.conf
+++ b/vagrant/logstash/bro-files_log.conf
@@ -18,7 +18,7 @@ input {
     sincedb_path => "/dev/null"
 
     #Edit the following path to reflect the location of your log files. You can also change the extension if you use something else
-    path => "/path/to/your/bro/logs/files*.log"
+    path => "/nsm/bro/logs/files*.log"
   }
 }
 
