--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -14,25 +14,11 @@ Vagrant.configure(2) do |config|
   # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = "ubuntu/trusty64"
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
-
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   config.vm.network "forwarded_port", guest: 5601, host: 8080
   config.vm.network "forwarded_port", guest: 9200, host: 9200
-
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
-
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  # config.vm.network "public_network"
 
   # Share an additional folder to the guest VM. The first argument is
   # the path on the host to the actual folder. The second argument is
@@ -40,14 +26,19 @@ Vagrant.configure(2) do |config|
   # argument is a set of non-required options.
   config.vm.synced_folder "logstash", "/etc/logstash/conf.d"
 
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
+  # #
+  # config.vm.provider "vmware_fusion" do |vmwf, override|
+  #   #override.vm.box_url = "http://files.vagrantup.com/precise64_vmware.box"
+  #   vmwf.gui = false
+  #   vmwf.vmx["displayName"] = "ELK"
+  #   vmwf.vmx["numvcpus"] = "4"
+  #   vmwf.vmx["memsize"] = "4096"
+  # end
+
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine
     vb.gui = false
-
+    vb.name = "ELK"
     # Customize the amount of memory on the VM:
     vb.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
     vb.cpus = 4
@@ -58,21 +49,4 @@ Vagrant.configure(2) do |config|
   config.vm.provision "shell", path: "setup/install_elk.sh"
   config.vm.provision "shell", path: "setup/install_prezto.sh"
   config.vm.provision "shell", path: "setup/install_bro.sh"
-
-  # View the documentation for the provider you are using for more
-  # information on available options.
-
-  # Define a Vagrant Push strategy for pushing to Atlas. Other push strategies
-  # such as FTP and Heroku are also available. See the documentation at
-  # https://docs.vagrantup.com/v2/push/atlas.html for more information.
-  # config.push.define "atlas" do |push|
-  #   push.app = "YOUR_ATLAS_USERNAME/YOUR_APPLICATION_NAME"
-  # end
-
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Puppet, Chef, Ansible, Salt, and Docker are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  # config.vm.provision "shell", inline <<-SHELL
-  #   sudo apt-get install apache2
-  # SHELL
 end
