--- a/vagrant/logstash/bro-http_log.conf
+++ b/vagrant/logstash/bro-http_log.conf
@@ -28,21 +28,21 @@ filter {
   if [message] =~ /^#/ {
     drop { }
   }
-  
+
   #Now, using the csv filter, we can define the Bro log fields
   if [type] == "bro-http_log" {
     csv {
       columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","trans_depth","method","host","uri","referrer","user_agent","request_body_len","response_body_len","status_code","status_msg","info_code","info_msg","filename","tags","username","password","proxied","orig_fuids","orig_mime_types","resp_fuids","resp_mime_types"]
-      
+
       #If you use a custom delimiter, change the following value in between the quotes to your delimiter. Otherwise, leave the next line alone.
       separator => ""
     }
-    
+
     #Let's convert our timestamp into the 'ts' field, so we can use Kibana features natively
     date {
       match => [ "ts", "UNIX" ]
     }
-    
+
     mutate {
       convert => [ "id.orig_p", "integer" ]
       convert => [ "id.resp_p", "integer" ]
@@ -50,7 +50,7 @@ filter {
       convert => [ "request_body_len", "integer" ]
       convert => [ "response_body_len", "integer" ]
       convert => [ "status_code", "integer" ]
-      convert => [ "info_code", "integer" ]    
+      convert => [ "info_code", "integer" ]
     }
   }
 }
@@ -58,6 +58,7 @@ filter {
 output {
   elasticsearch {
     embedded => true
+    host => localhost
+    protocol => "http"
   }
 }
-
