It's starting to rrrrreally come together!

--- a/kibana.conf
+++ b/kibana.conf
@@ -1,57 +1,15 @@
 # configuration of the server
 server {
-  listen                80 default_server;
-
-  server_name           elk;
-  access_log            /var/log/nginx/elk.access.log;
-
-  location / {
-    root  /var/www/kibana;
-    index  index.html;
-  }
-
-  location ~ ^/_aliases$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/.*/_aliases$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/_nodes$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/.*/_search$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/.*/_mapping {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/kibana-int/dashboard/.*$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/kibana-int/temp.*$ {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location ~ ^/_cluster/health {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
-
-  location /_bulk {
-    proxy_pass http://127.0.0.1:9200;
-    proxy_read_timeout 90;
-  }
+    listen 80;
+    server_name elk;
+    location / {
+        # You can set password protection
+        auth_basic "Restricted";
+        auth_basic_user_file /etc/nginx/.htpasswd;
+        proxy_pass  http://localhost:5601/;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        proxy_set_header        Host            $host;
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
