--- a/supervisord.conf
+++ b/supervisord.conf
@@ -22,9 +22,9 @@ autorestart=true
 stdout_logfile=/var/log/kibana.stdout.log
 stderr_logfile=/var/log/kibana.stderr.log
 
-# [program:nginx]
-# command = /usr/sbin/nginx
-# autostart=true
-# autorestart=true
-# stdout_logfile=/var/log/nginx.stdout.log
-# stderr_logfile=/var/log/nginx.stderr.log
+[program:nginx]
+command = /usr/sbin/nginx
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/nginx.stdout.log
+stderr_logfile=/var/log/nginx.stderr.log
